--- a/multimon.service
+++ b/multimon.service
@@ -1,9 +1,12 @@
 [Unit]
 Description=Multimonitor detection
+Requires=network-online.target
 After=graphical.target
+After=network-online.target
 
 [Service]
 ExecStart=/home/thomas/multimon.py
+ExecStartPost=/usr/bin/nitrogen --restore
 
 [Install]
 WantedBy=graphical.target
