add RestartSec to pasystray

--- a/pasystray.service
+++ b/pasystray.service
@@ -4,6 +4,7 @@ Description=PulseAudio system tray
 [Service]
 ExecStart=/usr//bin/pasystray
 Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=graphical.target
